creating block Initial and Advantages

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,89 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Run Smart</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;700&display=swap"
+      rel="stylesheet">
    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-   <h1>Hello world rigthjhk</h1>
+   <div class="initial">
+      <div class="container">
+         <header class="header">
+            <div class="header__logo">
+               <img src="img/icons/logo.png" alt="logo">
+            </div>
+            <div class="header__official">
+               Официальный представитель
+               <span>Garmin, Polar, Suunto</span>
+            </div>
+            <div class="header__contact">
+               <a href="tel:+74999228974" class="header__tell">+7 (499) 922-89-74</a>
+               <button class="button">заказать звонок</button>
+            </div>
+         </header>
+         <div class="initial__wrapper">
+            <h1 class="initial__title">Подбор пульсометра</h1>
+            <h2 class="initial__subtitle">с учётом Вашего уровня подготовки</h2>
+            <div class="initial__icons">
+               <div class="initial__item">
+                  <img src="img/icons/timer.png" alt="timer">
+                  Время подбора: <br>
+                  10 минут
+               </div>
+               <div class="initial__item">
+                  <img src="img/icons/delivery.png" alt="delivery">
+                  Бесплатная <br> доставка
+               </div>
+               <div class="initial__item">
+                  <img src="img/icons/questions.png" alt="questions">
+                  Ответим <br> на все вопросы
+               </div>
+            </div>
+            <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+            <div class="initial__link">
+               или
+               <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+            </div>
+         </div>
+      </div>
+   </div>
+   <main>
+      <div class="advantages">
+         <div class="container">
+            <div class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</div>
+            <div class="advantages__wrapper">
+               <div class="advantages__item">
+                  <div class="advantages__picture">
+                     <img src="img/icons/cup.png" alt="cup">
+                  </div>
+                  <div class="advantages__head">Делимся опытом</div>
+                  <div class="advantages__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами
+                     бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+               </div>
+               <div class="advantages__item">
+                  <div class="advantages__picture">
+                     <img src="img/icons/heart.png" alt="heart">
+                  </div>
+                  <div class="advantages__head">Заботимся о здоровье</div>
+                  <div class="advantages__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему
+                     здоровью и были в радость Вам и Вашим близким!</div>
+               </div>
+               <div class="advantages__item">
+                  <div class="advantages__picture">
+                     <img src="img/icons/shoe.png" alt="shoe">
+                  </div>
+                  <div class="advantages__head">Учим бегать</div>
+                  <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой
+                     бега в России - <a href="#">I LOVE RUNNING.</a></div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </main>
 </body>
 
 </html>
