--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,20 @@
             </div>
          </div>
       </div>
+      <div class="consultation">
+         <div class="container">
+            <h2 class="consultation__title">Получите бесплатную консультацию <br>
+               по подбору пульсометра </h2>
+            <div class="consultation__instruction">Просто заполните форму заявки <br>
+               и мы перезвоним вам в течении 10 минут</div>
+            <form action="#" class="form">
+               <input name="name" required placeholder="Ваше имя" type="text">
+               <input name="tel" required placeholder="Ваш телефон" type="number">
+               <input name="email" required placeholder="Ваш E-mail" type="email">
+               <button class="button button_form">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+         </div>
+      </div>
    </main>
 </body>
 
