--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,12 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;700&display=swap"
       rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-   <div class="initial">
+   <section class="initial">
       <div class="container">
          <header class="header">
             <div class="header__logo">
@@ -53,9 +54,9 @@
             </div>
          </div>
       </div>
-   </div>
+   </section>
    <main>
-      <div class="advantages">
+      <section class="advantages">
          <div class="container">
             <div class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="advantages__wrapper">
@@ -85,8 +86,8 @@
                </div>
             </div>
          </div>
-      </div>
-      <div class="consultation">
+      </section>
+      <section class="consultation">
          <div class="container">
             <h2 class="consultation__title">Получите бесплатную консультацию <br>
                по подбору пульсометра </h2>
@@ -99,8 +100,31 @@
                <button class="button button_form">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
          </div>
-      </div>
+      </section>
+      <section class="carousel">
+         <div class="container">
+            <div class="carousel__slider">
+               <div>
+                  <img src="img/picture/slide_1.jpg" alt="slide1">
+               </div>
+               <div>
+                  <img src="img/picture/slide_2.jpg" alt="slide2">
+               </div>
+               <div>
+                  <img src="img/picture/slide_3.jpg" alt="slide2">
+               </div>
+            </div>
+            <button class="carousel__prev">
+               <img src="img/icons/prev.svg" alt="prev">
+            </button>
+            <button class="carousel__next">
+               <img src="img/icons/next.svg" alt="next">
+            </button>
+         </div>
+      </section>
    </main>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+   <script src="js/script.js"></script>
 </body>
 
 </html>
