--- a/src/index.html
+++ b/src/index.html
@@ -404,7 +404,66 @@
             </div>
          </div>
       </section>
+      <section class="reviews">
+         <div class="container">
+            <h2 class="reviews__title">отзывы клиентов</h2>
+            <div class="reviews__item">
+               <img src="img/picture/review_1.png" alt="review_1" class="reviews__img">
+               <div class="reviews__wrapper">
+                  <div class="reviews__name">Ирина Иванченко </div>
+                  <div class="reviews__quantity">2 полумарафона</div>
+                  <div class="reviews__content">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали
+                     пульсометр, который подошёл именно под мои цели и финансовые возможности. Через некоторое время
+                     решила обновить гаджет - не раздумывая обратилась туда же. <br><br> Новые цели - новый гаджет!
+                     <br><br>
+                     Спасибо, RunSmart!
+                  </div>
+               </div>
+            </div>
+            <div class="reviews__item">
+               <img src="img/picture/review_2.png" alt="review_2" class="reviews__img">
+               <div class="reviews__wrapper">
+                  <div class="reviews__name">Иван Сёмочкин</div>
+                  <div class="reviews__quantity">1 полумарафон</div>
+                  <div class="reviews__content">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже
+                     себе делал.<br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую
+                     тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план
+                     тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!
+                  </div>
+               </div>
+            </div>
+            <div class="reviews__item">
+               <img src="img/picture/review_3.png" alt="review_3" class="reviews__img">
+               <div class="reviews__wrapper">
+                  <div class="reviews__name">Юлия Дашкина</div>
+                  <div class="reviews__quantity">2 полумарафона</div>
+                  <div class="reviews__content">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но
+                     становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила
+                     попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный
+                     вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько
+                     более коротких забегов и не намерена останавливаться!<br><br>Спасибо!!!
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
    </main>
+   <footer class="footer">
+      <iframe
+         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.3628986754393!2d37.645408130099966!3d55.76956883960727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRltGPLCAxMDcwNzg!5e0!3m2!1suk!2sua!4v1704715772267!5m2!1suk!2sua"
+         width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"
+         referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+      <div class="footer__information">
+         <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+         <a class="footer__tel" href="tel:8(499)9228974">8 (499) 922-89-74</a>
+         <div class="footer__social">
+            <a href="#" class="footer__link"><img src="img/icons/facebook.png" alt="facebook"></a>
+            <a href="#" class="footer__link"><img src="img/icons/instagram.png" alt="instagram"></a>
+            <a href="#" class="footer__link"><img src="img/icons/pinterest.png" alt="pinterest"></a>
+         </div>
+      </div>
+   </footer>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    <script src="js/script.js"></script>
