--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
    <section class="initial">
       <div class="container">
          <header class="header">
@@ -26,7 +27,7 @@
             </div>
             <div class="header__contact">
                <a href="tel:+74999228974" class="header__tell">+7 (499) 922-89-74</a>
-               <button class="button">заказать звонок</button>
+               <button data-modal="consultation" class="button">заказать звонок</button>
             </div>
          </header>
          <div class="initial__wrapper">
@@ -47,7 +48,7 @@
                   Ответим <br> на все вопросы
                </div>
             </div>
-            <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+            <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
             <div class="initial__link">
                или
                <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -55,6 +56,7 @@
          </div>
       </div>
    </section>
+
    <main>
       <section class="advantages">
          <div class="container">
@@ -448,6 +450,7 @@
          </div>
       </section>
    </main>
+
    <footer class="footer">
       <iframe
          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.3628986754393!2d37.645408130099966!3d55.76956883960727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRltGPLCAxMDcwNzg!5e0!3m2!1suk!2sua!4v1704715772267!5m2!1suk!2sua"
@@ -464,9 +467,41 @@
          </div>
       </div>
    </footer>
+
+   <div class="lining">
+      <div class="modal" id="consultation">
+         <div class="modal__close">&times;</div>
+         <div class="modal__title">Просто заполните форму заявки</div>
+         <div class="modal__subtitle">и мы перезвоним вам в течении 10 минут</div>
+         <form action="#" class="form form__modal-consultation">
+            <input name="name" required placeholder="Ваше имя" type="text">
+            <input name="tel" required placeholder="Ваш телефон" type="number">
+            <input name="email" required placeholder="Ваш E-mail" type="email">
+            <button class="button button_form">заказать кОНСУЛЬТАЦИЮ</button>
+         </form>
+      </div>
+      <div class="modal" id="order">
+         <div class="modal__close">&times;</div>
+         <div class="modal__title">Ваш заказ:</div>
+         <div class="modal__subtitle">Пульсометр Polar FT1</div>
+         <form action="#" class="form form__modal-consultation">
+            <input name="name" required placeholder="Ваше имя" type="text">
+            <input name="tel" required placeholder="Ваш телефон" type="number">
+            <input name="email" required placeholder="Ваш E-mail" type="email">
+            <button class="button button_form">Купить</button>
+         </form>
+      </div>
+      <div class="modal modal_mini" id="thanks">
+         <div class="modal__close">&times;</div>
+         <div class="modal__title">Спасибо за вашу заявку!</div>
+         <div class="modal__subtitle">Наш менеджер свяжется с вами в ближайшее время!</div>
+      </div>
+   </div>
+
    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
    <script src="js/script.js"></script>
+
 </body>
 
 </html>
