add Scrolling and Animation

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-   <section class="initial">
+   <section id="up" class="initial">
       <div class="container">
          <header class="header">
             <div class="header__logo">
@@ -71,7 +71,7 @@
                      бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
                </div>
                <div class="advantages__item">
-                  <div class="advantages__picture">
+                  <div class="advantages__picture advantages__picture_pulse">
                      <img src="img/icons/heart.png" alt="heart">
                   </div>
                   <div class="advantages__head">Заботимся о здоровье</div>
@@ -486,7 +486,7 @@
          <div class="modal__subtitle">Пульсометр Polar FT1</div>
          <form action="#" class="form form__modal-consultation">
             <input name="name" required placeholder="Ваше имя" type="text">
-            <input name="tel" required placeholder="Ваш телефон">
+            <input name="" required placeholder="Ваш телефон">
             <input name="email" required placeholder="Ваш E-mail" type="email">
             <button class="button button_form">Купить</button>
          </form>
@@ -497,6 +497,10 @@
          <div class="modal__subtitle">Наш менеджер свяжется с вами в ближайшее время!</div>
       </div>
    </div>
+
+   <a href="#up" class="pickup">
+      <img src="img/icons/pickup.png" alt="pickup">
+   </a>
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
